--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "autoprefixer": "^10.4.14",
+    "nodemon": "^3.0.1",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3"
   }
 }
